Enhanced CORS configuration for Vercel frontend - added explicit origins and headers